<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="20dp">

    <EditText
        android:id="@+id/edtUsername"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/margin_distance_40dp"
        android:layout_marginRight="@dimen/margin_distance_40dp"
        android:background="@drawable/bg_boder_black_radius"
        android:hint="@string/username"
        android:imeOptions="actionNext"
        android:inputType="text"
        android:paddingBottom="@dimen/padding_distance_10dp"
        android:paddingLeft="@dimen/padding_distance_20dp"
        android:paddingRight="@dimen/padding_distance_20dp"
        android:paddingTop="@dimen/padding_distance_10dp"
        android:textColor="@color/black"
        android:textColorHint="@color/black"
        android:textSize="@dimen/text_size_14"
        android:textStyle="italic" />

    <EditText
        android:id="@+id/edtPass"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/margin_distance_40dp"
        android:layout_marginRight="@dimen/margin_distance_40dp"
        android:layout_marginTop="@dimen/margin_distance_20dp"
        android:background="@drawable/bg_boder_black_radius"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:paddingBottom="@dimen/padding_distance_10dp"
        android:paddingLeft="@dimen/padding_distance_20dp"
        android:paddingRight="@dimen/padding_distance_20dp"
        android:paddingTop="@dimen/padding_distance_10dp"
        android:textColor="@color/black"
        android:textColorHint="@color/black"
        android:textSize="@dimen/text_size_14"
        android:textStyle="italic" />

    <EditText
        android:id="@+id/edtDisplayName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/margin_distance_40dp"
        android:layout_marginRight="@dimen/margin_distance_40dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/bg_boder_black_radius"
        android:hint="@string/display_name"
        android:imeOptions="actionNext"
        android:paddingBottom="@dimen/padding_distance_10dp"
        android:paddingLeft="@dimen/padding_distance_20dp"
        android:paddingRight="@dimen/padding_distance_20dp"
        android:paddingTop="@dimen/padding_distance_10dp"
        android:inputType="text"
        android:textColor="@color/black"
        android:textColorHint="@color/black"
        android:textSize="@dimen/text_size_14"
        android:textStyle="italic" />

    <EditText
        android:id="@+id/edtEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/margin_distance_40dp"
        android:layout_marginRight="@dimen/margin_distance_40dp"
        android:layout_marginTop="@dimen/margin_distance_20dp"
        android:background="@drawable/bg_boder_black_radius"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:paddingBottom="@dimen/padding_distance_10dp"
        android:paddingLeft="@dimen/padding_distance_20dp"
        android:paddingRight="@dimen/padding_distance_20dp"
        android:paddingTop="@dimen/padding_distance_10dp"
        android:textColor="@color/black"
        android:textColorHint="@color/black"
        android:textSize="@dimen/text_size_14"
        android:textStyle="italic" />

    <EditText
        android:id="@+id/edtPhone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/margin_distance_40dp"
        android:layout_marginRight="@dimen/margin_distance_40dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/bg_boder_black_radius"
        android:hint="@string/phone"
        android:imeOptions="actionNext"
        android:inputType="phone"
        android:paddingBottom="@dimen/padding_distance_10dp"
        android:paddingLeft="@dimen/padding_distance_20dp"
        android:paddingRight="@dimen/padding_distance_20dp"
        android:paddingTop="@dimen/padding_distance_10dp"
        android:textColor="@color/black"
        android:textColorHint="@color/black"
        android:textSize="@dimen/text_size_14"
        android:textStyle="italic" />

    <EditText
        android:id="@+id/edtAddress"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/margin_distance_40dp"
        android:layout_marginRight="@dimen/margin_distance_40dp"
        android:layout_marginTop="@dimen/margin_distance_20dp"
        android:background="@drawable/bg_boder_black_radius"
        android:hint="@string/address"
        android:imeOptions="actionDone"
        android:inputType="text"
        android:paddingBottom="@dimen/padding_distance_10dp"
        android:paddingLeft="@dimen/padding_distance_20dp"
        android:paddingRight="@dimen/padding_distance_20dp"
        android:paddingTop="@dimen/padding_distance_10dp"
        android:textColor="@color/black"
        android:textColorHint="@color/black"
        android:textSize="@dimen/text_size_14"
        android:textStyle="italic" />


    <Button
        android:id="@+id/btnSignUp"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/margin_distance_30dp"
        android:background="@color/yellow"
        android:text="@string/btnSignup"
        android:textColor="@color/black" />
</LinearLayout>